# libanswer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  answer.c  answer.cpp  answer.h  ask.cpp
test/: CMakeLists.txt  test_answer.cpp
